...
              },
            }}
          >
            <Drawer.Screen
              name="settings"
              options={{
                title: "Paramètres",
                drawerItemStyle: { display: "none" },
              }}
            />

            {/* Section: Suivi Bébé */}
            <Drawer.Screen
...
